--- a/estilo.css
+++ b/estilo.css
@@ -1,14 +1,8 @@
 @charset "UTF-8";
-
-:root{
-
-
-}
-
 *{
     margin: 0px;
     padding: 0px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 header{
     background-image: linear-gradient(to bottom,rgba(0, 128, 0, 0.748),rgba(0, 0, 0, 0.814));
@@ -20,6 +14,7 @@ header{
 }
 header > h1{
     margin-bottom: 10px;
+    font-size: 3.2em;
 }
 header > p{
 padding: 50px;
@@ -38,7 +33,7 @@ nav > a{
     font-weight: bold;
     border-radius: 5px;
     padding: 10px;
-    font-family: 'Courier New', Courier, monospace;
+    
     
 }
 nav a:hover{
