--- a/estilo.css
+++ b/estilo.css
@@ -5,7 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 header{
-    background-image: linear-gradient(to bottom,rgba(0, 128, 0, 0.748),rgba(0, 0, 0, 0.814));
+    background-image: linear-gradient(to bottom,rgb(79, 150, 79),rgba(0, 0, 0, 0.814));
     text-align: center;
     color: white;
     padding-top: 40px;
@@ -47,6 +47,16 @@ main{
     height: 500px;
     margin: auto;
 }
+section{
+    background-color:whi;
+    height: 100%;
+    width: 800px;
+    margin: auto;
+    margin-top: 20px;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.422);
+}
 body{
     background-color:white;
 }
@@ -57,3 +67,25 @@ footer{
     font-weight: bold;
     color: white;
 }
+/*
+.box{
+    width: 100px;
+    height: 100px;
+    background-color: aqua;
+    margin: auto;
+    border-radius: 20px;
+    
+}
+.box > h1{
+    margin-top: 20px;
+    text-align: center;
+    padding: 30px;
+}
+
+.box{animation: bounce 2s infinite;}
+@keyframes bounce {
+    0%{transform: translateY(0);}
+    80%{transform: translateY(-20px);}
+    60%{transform: translateY(-10px);}
+}*/
+
